short_tests/eddy_neknek/compiler.out
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c gs.c -o gs.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c sort.c -o sort.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c sarray_transfer.c -o sarray_transfer.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c sarray_sort.c -o sarray_sort.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c gs_local.c -o gs_local.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c fail.c -o fail.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c crystal.c -o crystal.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c comm.c -o comm.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c tensor.c -o tensor.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c sparse_cholesky.c -o sparse_cholesky.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c xxt.c -o xxt.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c amg.c -o amg.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c fcrystal.c -o fcrystal.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c fcrs.c -o fcrs.o
amg.c:767:12: warning: incompatible pointer to integer conversion passing 'char [7]' to parameter of type 'int' [-Wint-conversion]
      fail("ERROR ",__FILE__,__LINE__,
           ^~~~~~~~
./fail.h:39:1: note: passing argument to parameter 'status' here
DEF_FUNS()
^
./fail.h:32:24: note: expanded from macro 'DEF_FUNS'
  void  fail      (int status,         const char *file, unsigned line, \
                       ^
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findpts.c -o findpts.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findptsnn.c -o findptsnn.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findpts_local.c -o findpts_local.o
1 warning generated.
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c obbox.c -o obbox.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c poly.c -o poly.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c lob_bnd.c -o lob_bnd.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findpts_el_3.c -o findpts_el_3.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findpts_el_2.c -o findpts_el_2.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findptsnn_local.c -o findptsnn_local.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findptsnn_el_3.c -o findptsnn_el_3.o
mpicc -O0 -DMPI -DUNDERSCORE -DPREFIX=gslib -DGLOBAL_LONG_LONG -DAMG_BLOCK_ROWS=2400 -DNEK_EXITT  -c findptsnn_el_2.c -o findptsnn_el_2.o
ar cr libgs.a gs.o sort.o sarray_transfer.o sarray_sort.o gs_local.o fail.o crystal.o comm.o tensor.o sparse_cholesky.o xxt.o amg.o fcrystal.o fcrs.o findpts.o findptsnn.o findpts_local.o obbox.o poly.o lob_bnd.o findpts_el_3.o findpts_el_2.o findptsnn_local.o findptsnn_el_3.o findptsnn_el_2.o
ranlib libgs.a
mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/short_tests/eddy_neknek/eddy_uv.f  -o obj/eddy_uv.o 
mpif77 -o nek5000 obj/eddy_uv.o obj/drive.o obj/drive1.o obj/drive2.o obj/plan4.o obj/bdry.o obj/coef.o obj/conduct.o obj/connect1.o obj/connect2.o obj/dssum.o obj/edgec.o obj/eigsolv.o obj/gauss.o obj/genxyz.o obj/navier1.o obj/makeq.o obj/navier0.o obj/navier2.o obj/navier3.o obj/navier4.o obj/prepost.o obj/speclib.o obj/map2.o obj/turb.o obj/mvmesh.o obj/ic.o obj/gfldr.o obj/ssolv.o obj/planx.o obj/math.o obj/mxm_wrapper.o obj/hmholtz.o obj/gfdm_par.o obj/gfdm_op.o obj/gfdm_solve.o obj/subs1.o obj/subs2.o obj/genbox.o obj/gmres.o obj/hsmg.o obj/convect.o obj/induct.o obj/perturb.o obj/navier5.o obj/navier6.o obj/navier7.o obj/navier8.o obj/fast3d.o obj/fasts.o obj/calcz.o obj/byte.o obj/chelpers.o obj/byte_mpi.o obj/postpro.o obj/intp_usr.o obj/cvode_driver.o obj/nek_comm.o obj/vprops.o obj/makeq_aux.o obj/papi.o obj/nek_in_situ.o obj/readat_new.o obj/reader_re2.o obj/finiparser.o obj/iniparser.o obj/dictionary.o obj/mxm_std.o obj/comm_mpi.o obj/multimesh.o obj/blas.o obj/dsygv.o -L/Users/K10/Nek5000/3rd_party/gslib/src -lgs 

#############################################################
#                  Compilation successful!                  #
#############################################################
__TEXT	__DATA	__OBJC	others	dec	hex
2711552	417738752	0	4295151616	4715601920	119126000	


mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/short_tests/eddy_neknek/eddy_uv.f  -o obj/eddy_uv.o 
mpif77 -o nek5000 obj/eddy_uv.o obj/drive.o obj/drive1.o obj/drive2.o obj/plan4.o obj/bdry.o obj/coef.o obj/conduct.o obj/connect1.o obj/connect2.o obj/dssum.o obj/edgec.o obj/eigsolv.o obj/gauss.o obj/genxyz.o obj/navier1.o obj/makeq.o obj/navier0.o obj/navier2.o obj/navier3.o obj/navier4.o obj/prepost.o obj/speclib.o obj/map2.o obj/turb.o obj/mvmesh.o obj/ic.o obj/gfldr.o obj/ssolv.o obj/planx.o obj/math.o obj/mxm_wrapper.o obj/hmholtz.o obj/gfdm_par.o obj/gfdm_op.o obj/gfdm_solve.o obj/subs1.o obj/subs2.o obj/genbox.o obj/gmres.o obj/hsmg.o obj/convect.o obj/induct.o obj/perturb.o obj/navier5.o obj/navier6.o obj/navier7.o obj/navier8.o obj/fast3d.o obj/fasts.o obj/calcz.o obj/byte.o obj/chelpers.o obj/byte_mpi.o obj/postpro.o obj/intp_usr.o obj/cvode_driver.o obj/nek_comm.o obj/vprops.o obj/makeq_aux.o obj/papi.o obj/nek_in_situ.o obj/readat_new.o obj/reader_re2.o obj/finiparser.o obj/iniparser.o obj/dictionary.o obj/mxm_std.o obj/comm_mpi.o obj/multimesh.o obj/blas.o obj/dsygv.o -L/Users/K10/Nek5000/3rd_party/gslib/src -lgs 

#############################################################
#                  Compilation successful!                  #
#############################################################
__TEXT	__DATA	__OBJC	others	dec	hex
2711552	417738752	0	4295151616	4715601920	119126000	


mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/core/multimesh.f -o obj/multimesh.o
/Users/K10/Nek5000/core/multimesh.f:635:13:

      write(6,*) rsid_nn(i),elsid_nn(i),dist_all(i),disti_all(i),'k10dis'
             1
Error: Syntax error in argument list at (1)
/Users/K10/Nek5000/core/multimesh.f:636:9:

       enddo
         1
Error: Expecting END SUBROUTINE statement at (1)
/Users/K10/Nek5000/core/multimesh.f:92:61:

       write(6,*) idsess,nid,npall,npsess(0),npsess(1),npsess(2),'npall'
                                                             1
Warning: Array reference at (1) is out of bounds (2 > 1) in dimension 1
make: *** [obj/multimesh.o] Error 1
mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/core/multimesh.f -o obj/multimesh.o
/Users/K10/Nek5000/core/multimesh.f:92:61:

       write(6,*) idsess,nid,npall,npsess(0),npsess(1),npsess(2),'npall'
                                                             1
Warning: Array reference at (1) is out of bounds (2 > 1) in dimension 1
mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/short_tests/eddy_neknek/eddy_uv.f  -o obj/eddy_uv.o 
mpif77 -o nek5000 obj/eddy_uv.o obj/drive.o obj/drive1.o obj/drive2.o obj/plan4.o obj/bdry.o obj/coef.o obj/conduct.o obj/connect1.o obj/connect2.o obj/dssum.o obj/edgec.o obj/eigsolv.o obj/gauss.o obj/genxyz.o obj/navier1.o obj/makeq.o obj/navier0.o obj/navier2.o obj/navier3.o obj/navier4.o obj/prepost.o obj/speclib.o obj/map2.o obj/turb.o obj/mvmesh.o obj/ic.o obj/gfldr.o obj/ssolv.o obj/planx.o obj/math.o obj/mxm_wrapper.o obj/hmholtz.o obj/gfdm_par.o obj/gfdm_op.o obj/gfdm_solve.o obj/subs1.o obj/subs2.o obj/genbox.o obj/gmres.o obj/hsmg.o obj/convect.o obj/induct.o obj/perturb.o obj/navier5.o obj/navier6.o obj/navier7.o obj/navier8.o obj/fast3d.o obj/fasts.o obj/calcz.o obj/byte.o obj/chelpers.o obj/byte_mpi.o obj/postpro.o obj/intp_usr.o obj/cvode_driver.o obj/nek_comm.o obj/vprops.o obj/makeq_aux.o obj/papi.o obj/nek_in_situ.o obj/readat_new.o obj/reader_re2.o obj/finiparser.o obj/iniparser.o obj/dictionary.o obj/mxm_std.o obj/comm_mpi.o obj/multimesh.o obj/blas.o obj/dsygv.o -L/Users/K10/Nek5000/3rd_party/gslib/src -lgs 

#############################################################
#                  Compilation successful!                  #
#############################################################
__TEXT	__DATA	__OBJC	others	dec	hex
2711552	417738752	0	4295151616	4715601920	119126000	


mpif77 -c  -O2 -fdefault-real-8 -fdefault-double-8 -cpp -DNEKNEK -DMPI -DUNDERSCORE -DTIMER -I/Users/K10/Nek5000/short_tests/eddy_neknek -I/Users/K10/Nek5000/core -I./ /Users/K10/Nek5000/short_tests/eddy_neknek/eddy_uv.f  -o obj/eddy_uv.o 
mpif77 -o nek5000 obj/eddy_uv.o obj/drive.o obj/drive1.o obj/drive2.o obj/plan4.o obj/bdry.o obj/coef.o obj/conduct.o obj/connect1.o obj/connect2.o obj/dssum.o obj/edgec.o obj/eigsolv.o obj/gauss.o obj/genxyz.o obj/navier1.o obj/makeq.o obj/navier0.o obj/navier2.o obj/navier3.o obj/navier4.o obj/prepost.o obj/speclib.o obj/map2.o obj/turb.o obj/mvmesh.o obj/ic.o obj/gfldr.o obj/ssolv.o obj/planx.o obj/math.o obj/mxm_wrapper.o obj/hmholtz.o obj/gfdm_par.o obj/gfdm_op.o obj/gfdm_solve.o obj/subs1.o obj/subs2.o obj/genbox.o obj/gmres.o obj/hsmg.o obj/convect.o obj/induct.o obj/perturb.o obj/navier5.o obj/navier6.o obj/navier7.o obj/navier8.o obj/fast3d.o obj/fasts.o obj/calcz.o obj/byte.o obj/chelpers.o obj/byte_mpi.o obj/postpro.o obj/intp_usr.o obj/cvode_driver.o obj/nek_comm.o obj/vprops.o obj/makeq_aux.o obj/papi.o obj/nek_in_situ.o obj/readat_new.o obj/reader_re2.o obj/finiparser.o obj/iniparser.o obj/dictionary.o obj/mxm_std.o obj/comm_mpi.o obj/multimesh.o obj/blas.o obj/dsygv.o -L/Users/K10/Nek5000/3rd_party/gslib/src -lgs 

#############################################################
#                  Compilation successful!                  #
#############################################################
__TEXT	__DATA	__OBJC	others	dec	hex
2711552	417738752	0	4295151616	4715601920	119126000	


